# archbot-secrets

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  proposal.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  secret-lifecycle.md  technology-stack.md
docs/adr/: 0001-local-first-keyring.md
examples/: manifest.example.json
scripts/: bootstrap.sh
src/agent_vault/: __init__.py  __main__.py  api.py  cli.py  config.py  manifest.py  models.py  policy.py  runner.py  service.py  vault.py
tests/integration/: test_cli_init.py
tests/unit/: test_api.py  test_manifest.py  test_policy.py
