[project]
name = "agent-vault"
version = "0.1.0"
description = "Local-first secrets manager for agentic AI runtimes"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Agent Vault Team" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "keyring>=25.0.0",
  "pydantic>=2.8.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.31.0",
]

[project.scripts]
agent-vault = "agent_vault.cli:main"

[tool.poetry]
packages = [{ include = "agent_vault", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.5.0"
mypy = ">=1.10.0"
httpx = ">=0.27.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
